Versão inicial terminada
Agora adicionar slides em cada categoria de fotos.
Para isso eu vou precisar de conhecimentod em JS.

--- a/index.html
+++ b/index.html
@@ -29,45 +29,45 @@
       </div>
 
       <img src=
-      "https://source.unsplash.com/featured/1600x900/?nature,water"
+      "https://source.unsplash.com/featured/?nature,natural"
       alt="">
       <div class="caption">
-        <h3>Foto 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Ex, necessitatibus.</p>
+        <h3>Natureza</h3>
       </div>
       <img src=
-      "https://source.unsplash.com/featured/1600x900/?nature,tree"
+      "https://source.unsplash.com/featured/?people,person"
       alt="">
       <div class="caption">
-        <h3>Foto 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Ex, necessitatibus.</p>
+        <h3>Pessoas</h3>
       </div>
       <img src=
-      "https://source.unsplash.com/featured/1600x900/?nature,flower"
+      "https://source.unsplash.com/featured/?event,happening"
       alt="">
       <div class="caption">
-        <h3>Foto 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Ex, necessitatibus.</p>
+        <h3>Eventos</h3>
       </div>
       <img src=
-      "https://source.unsplash.com/featured/1600x900/?nature,animal"
+      "https://source.unsplash.com/featured/?product"
       alt="">
       <div class="caption">
-        <h3>Foto 4</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Ex, necessitatibus.</p>
+        <h3>Produtos</h3>
       </div>
       <img src=
-      "https://source.unsplash.com/featured/1600x900/?nature,mountain"
+      "https://source.unsplash.com/featured/?journey,adventure"
       alt="">
       <div class="caption">
-        <h3>Foto 5</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Ex, necessitatibus.</p>
+        <h3>Jornadas</h3>
       </div>
+      <img src=
+      "https://source.unsplash.com/featured/?rave"
+      alt="">
+      <div class="caption">
+        <h3>Festas</h3>
+      </div>
+    </div>
+
+    <div id="reload">
+      <p>Recarregue a página para ver mais imagens.</p>
     </div>
   </main>
 
@@ -80,6 +80,12 @@
     <p>Email: <strong>contato@sintese.foto</strong></p>
     <p>Fone: <strong>(19) 99999-9999</strong></p>
   </footer>
+  
+  <div id="credits">
+    <p>por 
+      <a href="https://isaacmuniz.dev" target="_blank">isaacmuniz.dev</a>
+    </p>
+  </div>
 
   <script
     src="http://code.jquery.com/jquery-3.4.1.min.js"
