--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <!-- Landing Area -->
+
     <div id="landing">
       <div id="landing-text">
         <div id="landing-text-inner">
@@ -87,11 +87,14 @@
     </p>
   </div>
 
+  <!-- get jquery -->
   <script
     src="http://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
 
+  <!-- script for smooth scrolling -->
   <script src="js/main.js"></script>
 </body>
 </html>
