--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- get jquery -->
   <script
-    src="http://code.jquery.com/jquery-3.4.1.min.js"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous">
   </script>
