--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </p>
     <p>Email: <strong>contato@sintese.foto</strong></p>
     <p>Fone: <strong>(19) 99999-9999</strong></p>
+    <p>Nós olhamos a vida com amor e fotografamos com paixão.</p>
   </footer>
   
   <div id="credits">
