heart color is important

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div id="credits">
       <p>
-        feito com &hearts; por
+        feito com <span>&hearts;</span> por
         <a href="https://isaacmuniz.dev" target="_blank">isaacDev</a>
       </p>
     </div>
