caption smaller and img alt

--- a/index.html
+++ b/index.html
@@ -29,34 +29,43 @@
 
         <img
           src="https://source.unsplash.com/featured/?nature,natural"
-          alt=""
+          alt="foto da natureza"
         />
         <div class="caption">
           <h3>Natureza</h3>
         </div>
-        <img src="https://source.unsplash.com/featured/?people,person" alt="" />
+        <img
+          src="https://source.unsplash.com/featured/?people,person"
+          alt="foto de pessoa"
+        />
         <div class="caption">
           <h3>Pessoas</h3>
         </div>
         <img
           src="https://source.unsplash.com/featured/?event,happening"
-          alt=""
+          alt="foto de evento"
         />
         <div class="caption">
           <h3>Eventos</h3>
         </div>
-        <img src="https://source.unsplash.com/featured/?product" alt="" />
+        <img
+          src="https://source.unsplash.com/featured/?product"
+          alt="foto de produto"
+        />
         <div class="caption">
           <h3>Produtos</h3>
         </div>
         <img
           src="https://source.unsplash.com/featured/?journey,adventure"
-          alt=""
+          alt="foto de jornada"
         />
         <div class="caption">
           <h3>Jornadas</h3>
         </div>
-        <img src="https://source.unsplash.com/featured/?rave" alt="" />
+        <img
+          src="https://source.unsplash.com/featured/?rave"
+          alt="foto de festa"
+        />
         <div class="caption">
           <h3>Festas</h3>
         </div>
