--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- remix icon -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.4.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <title>Síntese Fotografia</title>
   </head>
   <body>
@@ -83,6 +88,8 @@
       </p>
       <p>Email: <strong>contato@sintese.foto</strong></p>
       <p>Fone: <strong>(19) 99999-9999</strong></p>
+      <a href=""><i class="ri-instagram-line"></i></a>
+      <a href=""><i class="ri-facebook-circle-line"></i></a>
     </footer>
 
     <div id="credits">
