Link para IsaacDevelops Linktree

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     <div id="credits">
       <p>
         feito com &#128153; por
-        <a href="https://isaacmuniz.dev" target="_blank">isaacDev</a>
+        <a href="https://linktr.ee/isaac.develops" target="_blank"
+          >IsaacDevelops</a
+        >
       </p>
     </div>
 
