Codenome mudado para códigoisaac

--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
     <div id="credits">
       <p>
         feito com &#128153; por
-        <a href="https://linktr.ee/isaac.develops" target="_blank"
-          >IsaacDevelops</a
-        >
+        <a href="https://linktr.ee/codigoisaac" target="_blank">códigoisaac</a>
       </p>
     </div>
 
